--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<link rel="stylesheet" type="text/css" href="">
 	<link rel="manifest" href="./manifest.webmanifest">
 	<title></title>
 </head>
+
 <body>
 	<div id="LastFM">
-<p>Dipo's top artists</p>
-<ul>
-</ul></div>
+		<p>Dipo's top artists</p>
+		<p>{{myArtists}}</p>
+		<ul>
+			<li v-for="(artist, index) in myArtists">
+				<span v-html="artist.Name"></span>
+		</ul>
+	</div>
 </body>
-</html>
 
+</html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
