--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 	<div id="LastFM">
 		<p>Dipo's top artists</p>
-		<p>{{myArtists}}</p>
-		<ul>
-			<li v-for="(artist, index) in myArtists">
-				<span v-html="artist.Name"></span>
+		<ul class="artistList">
+			<li v-for="(artist, index) in myArtists" v-bind:key="artist.rank">
+	<!-- 	<p>{{artist.image.find(size => size.size === 'large')}}</p> -->
+				<span v-html="artist.name"></span></div>
 		</ul>
 	</div>
 </body>
@@ -23,3 +23,9 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 <script src="./scripts.js" type="text/javascript"></script>
+
+<style type="text/css">
+	li{
+		list-style-type: none;
+	}
+</style>
