--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
 <body>
 	<div id="LastFM">
-		<button v-on:click="getTopArtists()">Get Top Artists</button>
+		<button v-on:click="updateTopArtists()">Get Dipo's Top Artists</button>
 		<template v-if="myArtists">
 			<div>
-				<p>Dipo's top artists</p>
+				<p>Dipo's top artists <span>Cached on [datetime of last get request]</span></p>
 				<ul class="artistList">
 					<li v-for="(artist, index) in myArtists" :key="`artist-${index}`" v-bind:class="'artist-' + index">
-						<img :src="backgroundImage(artist)">
+						<!-- <img :src="backgroundImage(artist)"> -->
 						<span v-html="artist.name"></span>
 					</li>
 			</div>
@@ -28,7 +28,7 @@
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="vue.js"></script>
 <script src="./scripts.js" type="text/javascript"></script>
 <style type="text/css">
 li {
