--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 		<template v-if="myArtists">
 			<div>
 				<p>Dipo's top artists</p>
-				<p>Cached on {{cachedTimeStamp.time}}</p>
+				<p v-if="errorState === true">There has been an error<span v-if="localStorage.cachedArtists">Here is a previously cached list</span></p>
+				<p v-if="cachedTimeStamp">Retrieved on {{cachedTimeStamp.time}}</p>
 				<ul class="artistList">
 					<li v-for="(artist, index) in myArtists" :key="`artist-${index}`" v-bind:class="'artist-' + index">
 						<!-- <img :src="backgroundImage(artist)"> -->
-						<span v-html="artist.name"></span>
+						<span>{{artist.name}} - {{artist.playcount}} plays</span>
 					</li>
 			</div>
 		</template>
@@ -30,7 +31,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="vue.js"></script>
-<script src="./scripts.js" type="text/javascript"></script>
+<script src="scripts.js" type="text/javascript"></script>
 <style type="text/css">
 li {
 	list-style-type: none;
