--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<template v-if="myArtists">
 			<div>
 				<p>Dipo's top artists</p>
-				<p v-if="errorState === true">There has been an error<span v-if="localStorage.cachedArtists">Here is a previously cached list</span></p>
+				<p v-if="errorState">There has been an error.
+				<!-- <span v-if="cachedArtists">Here is a previously cached list</span> --></p>
 				<p v-if="cachedTimeStamp">Retrieved on {{cachedTimeStamp.time}}</p>
 				<ul class="artistList">
 					<li v-for="(artist, index) in myArtists" :key="`artist-${index}`" v-bind:class="'artist-' + index">
