added now playing indicator in text

--- a/index.html
+++ b/index.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="manifest" href="./manifest.webmanifest">
-	<title>Dipo's Progressive Web App</title>
-</head>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>Dipo Ogunmodede Last FM prototype</title>
+	</head>
 
-<body>
-	<main id="LastFM">
-		<button v-on:click="updateTopArtists()">Get or Update Dipo's Top Artists</button>
-		<button v-on:click="updateRecentTracks
+	<body>
+		<main id="LastFM">
+			<!-- <button v-on:click="updateTopArtists()">Get or Update Dipo's Top Artists</button> -->
+			<button v-on:click="updateRecentTracks
 ()">Update Dipo's Most Recent Tracks</button>
-		<label>Refresh automatically
+			<button v-on:click="getPreviousPage()">Prev</button>
+			<button v-on:click="getNextPage()">Next</button>
+			<label>Refresh automatically
 			<input v-model="autoMode" type="checkbox"></label>
-		{{autoMode}}
-		<div class="topArtists">
-			<p v-if="errorState">There has been an error. <span v-if="cachedArtists||cachedRecentTracks">Here is a previously cached list</span>
-			</p>
-			<template v-if="myArtists">
-				<p>Dipo's top artists</p>
-				<p v-if="cachedTopArtistsTimeStamp">Retrieved on {{cachedTopArtistsTimeStamp.time}}</p>
-				<ul class="artistList">
-					<li v-for="(artist, index) in myArtists" :key="`artist-${index}`" v-bind:class="'artist-' + index">
-						<!-- <img :src="backgroundImage(artist)"> -->
+			{{autoMode}}
+			<div class="topArtists">
+				<p v-if="errorState">There has been an error. <span v-if="cachedArtists||cachedRecentTracks">Here is a previously cached list</span>
+				</p>
+				<template v-if="myArtists">
+					<p>Dipo's top artists</p>
+					<p v-if="cachedTopArtistsTimeStamp">Retrieved on {{cachedTopArtistsTimeStamp.time}}</p>
+					<ul class="artistList">
+						<li v-for="(artist, index) in myArtists" :key="`artist-${index}`" v-bind:class="'artist-' + index">
+6
 						<span>{{artist.name}} - {{artist.playcount}} plays</span>
 
-					</li>
-				</ul>
-			</template>
-		</div>
-		<div class="mostRecentTracks">
-			<template v-if="recentTracks">
-				<p>Dipo's most recent tracks <span v-if="autoMode">(updates automatically)</span></p>
-				<p v-if="cachedTopArtistsTimeStamp">Retrieved on {{cachedRecentTracksTimeStamp.time}}</p>
-				<ul class="mostRecentTracksList">
-					<li v-for="(track, index) in recentTracks" :key="`track-${index}`" class="track" v-bind:class="'track-' + index">
-						<span :class="{ playing: track['@attr'] && track['@attr'].nowplaying }">{{track.artist['#text']}} - {{track.name}}</span>
-						
+						</li>
+					</ul>
+				</template>
+			</div>
+			<div class="mostRecentTracks">
+				<template v-if="recentTracks">
+					<p>Dipo's most recent tracks <span v-if="autoMode">(updates automatically)</span></p>
+					<p v-if="cachedTopArtistsTimeStamp">Retrieved on {{cachedRecentTracksTimeStamp.time}}</p>
+					<ul class="mostRecentTracksList">
+						<li v-for="(track, index) in recentTracks" :key="`track-${index}`" class="track" v-bind:class="'track-' + index">
+							<span :class="{ playing: track['@attr'] && track['@attr'].nowplaying }">{{track.artist['#text']}} - {{track.name}} {{track['@attr'] && track['@attr'].nowplaying ? '(Dipo is listening to this right now)' : ''}}
+							</span>
 
-					</li>
-				</ul>
-			</template>
-		</div>
-	</main>
+						</li>
+					</ul>
+				</template>
+			</div>
+		</main>
 	</div>
 </body>
 
@@ -55,5 +56,4 @@
 li {
 	list-style-type: none;
 }
-
 </style>
