--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 	<body>
 		<main id="LastFM">
 			<!-- <button v-on:click="updateTopArtists()">Get or Update Dipo's Top Artists</button> -->
-			<div>This is a very ugly application that will show you every song I've listened to today.</div>
+			<h1>This is a very ugly application that will show you every song I've listened to today.</h1>
 			<button v-on:click="updateRecentTracks
 ()">Request update</button>
 			<!-- <button v-on:click="getPreviousPage()">Prev</button>
 			<button v-on:click="getNextPage()">Next</button> -->
-			<label>Refresh automatically
-			<input v-model="autoMode" type="checkbox"></label>
+			<label for="autoRefresh">Refresh automatically
+			<input id="autoRefresh" v-model="autoMode" type="checkbox"></label>
 			{{autoMode}}
 			<div class="mostRecentTracks">
 				<template v-if="recentTracks">
