--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 				<template v-if="recentTracks">
 					<p>Dipo's most recent tracks <span v-if="autoMode">(updates automatically)</span></p>
 					<p v-if="cachedTopArtistsTimeStamp">Retrieved on {{cachedRecentTracksTimeStamp.time}}</p>
-					<ul class="mostRecentTracksList">
-						<li v-for="(track, index) in recentTracks" :key="`track-${index}`" class="track" :class="{ playing: track['@attr'] && track['@attr'].nowplaying }" >
-							<span class="songTitle">
+					<ol class="mostRecentTracksList">
+						<li v-for="(track, index) in recentTracks" :key="`track-${index}`" class="track"  >
+							<span class="songTitle" :class="{ playing: track['@attr'] && track['@attr'].nowplaying }">
 								{{track.artist['#text']}} - {{track.name}}
 								{{track['@attr'] && track['@attr'].nowplaying ?
 								'(Dipo is listening to this right now)' : ''}}
 
-								{{track.date && track.date.uts ? 
-								"@" + new Date(track.date.uts * 1000).toLocaleTimeString() : ''}}
+								<span>{{track.date && track.date.uts ? 
+								new Date(track.date.uts * 1000).toLocaleTimeString() : ''}}</span>
 							</span>
 
 						</li>
-					</ul>
+					</ol>
 				</template>
 			</div>
 			<div class="topArtists">
