--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<title>Dipo Ogunmodede Last FM prototype</title>
+		<title>Dipo Ogunmodede's music</title>
 	</head>
 	<body>
 		<main id="LastFM">
 			<!-- <button v-on:click="updateTopArtists()">Get or Update Dipo's Top Artists</button> -->
 			<h1>This is a very ugly application that will show you every song I've listened to today.</h1>
+			<p>I would prefer if this app was not localised and showed timestamps based on en-GB locale, but I can't figure out how to do that because it's a fucking nightmare and I'm not being paid to do that shit</p>
 			<button v-on:click="updateRecentTracks
 ()">Request update</button>
 			<!-- <button v-on:click="getPreviousPage()">Prev</button>
