clearer intro h1 text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<main id="LastFM">
 			<!-- <button v-on:click="updateTopArtists()">Get or Update Dipo's Top Artists</button> -->
-			<h1>This is a very ugly application that will show you every song I've listened to today.</h1>
+			<h1>This is a very ugly application that will show you every song I've listened to today by querying this <a href="https://www.last.fm/api">API</a></h1>
 			<p>I would prefer if this app was not localised and showed timestamps based on en-GB locale, but I can't figure out how to do that because time in JS is a fucking nightmare</p>
 			<p>For now it will show every song played after midnight in whatever timezone your device is in.</p>
 			<button v-on:click="updateRecentTracks
